--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
+
+.feature {
+  @apply flex flex-col-reverse lg:flex-row justify-center;
+}
+
+.content {
+  @apply lg:w-1/2 p-10 flex flex-wrap content-center lg:justify-start justify-center;
+}
+
 @tailwind utilities;
