--- a/styles/global.css
+++ b/styles/global.css
@@ -9,4 +9,16 @@
   @apply lg:w-1/2 p-10 flex flex-wrap content-center lg:justify-start justify-center;
 }
 
+.hero {
+  @apply text-center mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28;
+}
+
+.hero .heading {
+  @apply text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl;
+}
+
+.hero p {
+  @apply my-3 text-base text-gray-500 md:my-5 sm:text-lg mx-auto md:text-xl;
+}
+
 @tailwind utilities;
