Update heading css class

--- a/styles/global.css
+++ b/styles/global.css
@@ -14,7 +14,7 @@
 }
 
 .hero .heading {
-  @apply text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl;
+  @apply tracking-tight font-extrabold text-gray-900 text-5xl md:text-6xl lg:text-7xl;
 }
 
 .hero p {
