--- a/styles/global.css
+++ b/styles/global.css
@@ -21,4 +21,8 @@
   @apply my-3 text-base text-gray-500 md:my-5 sm:text-lg mx-auto md:text-xl;
 }
 
+.btn {
+  @apply flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md  md:py-4 md:text-lg md:px-10;
+}
+
 @tailwind utilities;
