--- a/styles/global.css
+++ b/styles/global.css
@@ -13,12 +13,8 @@
   @apply text-center mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28;
 }
 
-.hero .heading {
-  @apply tracking-tight font-extrabold text-gray-900 text-5xl md:text-6xl lg:text-7xl;
-}
-
 .hero p {
-  @apply my-3 text-base text-gray-500 md:my-5 sm:text-lg mx-auto md:text-xl;
+  @apply my-3 text-base md:my-5 sm:text-lg md:text-xl;
 }
 
 .btn {
@@ -26,3 +22,21 @@
 }
 
 @tailwind utilities;
+
+/* Heading Responsive Styles */
+
+.xlarge-heading {
+  @apply text-5xl md:text-6xl lg:text-7xl;
+}
+
+.large-heading {
+  @apply text-4xl md:text-5xl lg:text-6xl;
+}
+
+.medium-heading {
+  @apply text-3xl md:text-4xl lg:text-5xl;
+}
+
+.small-heading {
+  @apply text-2xl md:text-3xl lg:text-4xl;
+}
