--- a/styles/global.css
+++ b/styles/global.css
@@ -9,4 +9,34 @@
   @apply lg:w-1/2 p-10 flex flex-wrap content-center lg:justify-start justify-center;
 }
 
+.hero {
+  @apply text-center mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28;
+}
+
+.hero p {
+  @apply my-3 text-base md:my-5 sm:text-lg md:text-xl;
+}
+
+.btn {
+  @apply flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md  md:py-4 md:text-lg md:px-10;
+}
+
 @tailwind utilities;
+
+/* Heading Responsive Styles */
+
+.xlarge {
+  @apply text-5xl md:text-6xl lg:text-7xl;
+}
+
+.large {
+  @apply text-4xl md:text-5xl lg:text-6xl;
+}
+
+.medium {
+  @apply text-3xl md:text-4xl lg:text-5xl;
+}
+
+.small {
+  @apply text-2xl md:text-3xl lg:text-4xl;
+}
