--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,7 @@
   @apply text-center mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28;
 }
 
+/* TODO: create responsive text size classes */
 .hero p {
   @apply my-3 text-base md:my-5 sm:text-lg md:text-xl;
 }
