--- a/styles/global.css
+++ b/styles/global.css
@@ -41,3 +41,11 @@
 .small {
   @apply text-2xl md:text-3xl lg:text-4xl;
 }
+
+.xsmall {
+  @apply text-xl md:text-2xl lg:text-3xl;
+}
+
+.xxsmal {
+  @apply text-lg md:text-xl lg:text-2xl;
+}
