--- a/styles/global.css
+++ b/styles/global.css
@@ -49,3 +49,15 @@
 .xxsmal {
   @apply text-lg md:text-xl lg:text-2xl;
 }
+
+.icon-small {
+  @apply w-10 h-10;
+}
+
+.icon-medium {
+  @apply w-14 h-14;
+}
+
+.icon-large {
+  @apply w-20 h-20;
+}
