--- a/styles/global.css
+++ b/styles/global.css
@@ -22,6 +22,18 @@
   @apply flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md  md:py-4 md:text-lg md:px-10;
 }
 
+.service-icon {
+  @apply mx-auto mb-4 icon-small;
+}
+
+.service-icon-medium {
+  @apply mx-auto mb-4 icon-medium;
+}
+
+.service-icon-large {
+  @apply mx-auto mb-4 icon-large;
+}
+
 @tailwind utilities;
 
 /* Heading Responsive Styles */
