--- a/styles/global.css
+++ b/styles/global.css
@@ -22,6 +22,22 @@
   @apply flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md  md:py-4 md:text-lg md:px-10;
 }
 
+.service {
+  @apply text-center p-8;
+}
+
+.service .icon-s {
+  @apply mx-auto mb-8 icon-small;
+}
+
+.service .icon-m {
+  @apply mx-auto mb-8 icon-medium;
+}
+
+.service .icon-l {
+  @apply mx-auto mb-8 icon-large;
+}
+
 @tailwind utilities;
 
 /* Heading Responsive Styles */
@@ -40,4 +56,24 @@
 
 .small {
   @apply text-2xl md:text-3xl lg:text-4xl;
+}
+
+.xsmall {
+  @apply text-xl md:text-2xl lg:text-3xl;
+}
+
+.xxsmal {
+  @apply text-lg md:text-xl lg:text-2xl;
+}
+
+.icon-small {
+  @apply w-10 h-10;
+}
+
+.icon-medium {
+  @apply w-14 h-14;
+}
+
+.icon-large {
+  @apply w-20 h-20;
 }
