--- a/styles/global.css
+++ b/styles/global.css
@@ -16,10 +16,6 @@
 .hero .cta {
   @apply flex justify-center mb-4 md:mb-8 mt-8 md:mt-5;
 }
-/* TODO: create responsive text size classes */
-.hero p {
-  @apply text-xl md:text-2xl mb-6 md:mb-8;
-}
 
 .btn {
   @apply flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md  md:py-4 md:text-lg md:px-10;
@@ -41,28 +37,32 @@
 
 /* Heading Responsive Styles */
 
-.xlarge {
+.xxxlarge {
   @apply text-5xl md:text-6xl lg:text-7xl;
 }
 
-.large {
+.xxlarge {
   @apply text-4xl md:text-5xl lg:text-6xl;
 }
 
-.medium {
+.xlarge {
   @apply text-3xl md:text-4xl lg:text-5xl;
 }
 
-.small {
+.large {
   @apply text-2xl md:text-3xl lg:text-4xl;
 }
 
-.xsmall {
+.medium {
   @apply text-xl md:text-2xl lg:text-3xl;
 }
 
-.xxsmal {
+.normal {
   @apply text-lg md:text-xl lg:text-2xl;
+}
+
+.small {
+  @apply text-base md:text-lg lg:text-xl;
 }
 
 .icon-small {
