Add grid and container component

--- a/styles/global.css
+++ b/styles/global.css
@@ -6,11 +6,11 @@
 }
 
 .content {
-  @apply lg:w-1/2 p-10 flex flex-wrap content-center lg:justify-start justify-center;
+  @apply lg:w-1/2 py-5 px-4 sm:px-6 lg:px-8  flex flex-wrap content-center lg:justify-start justify-center;
 }
 
 .hero {
-  @apply text-center mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28;
+  @apply text-center mt-10 px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28;
 }
 
 .hero .cta {
