--- a/styles/global.css
+++ b/styles/global.css
@@ -6,19 +6,15 @@
 }
 
 .content {
-  @apply lg:w-1/2 p-10 flex flex-wrap content-center lg:justify-start justify-center;
+  @apply lg:w-1/2 py-5 px-4 sm:px-6 lg:px-8  flex flex-wrap content-center lg:justify-start justify-center;
 }
 
 .hero {
-  @apply text-center mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28;
+  @apply text-center mt-10 px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28;
 }
 
 .hero .cta {
   @apply flex justify-center mb-4 md:mb-8 mt-8 md:mt-5;
-}
-/* TODO: create responsive text size classes */
-.hero p {
-  @apply text-xl md:text-2xl mb-6 md:mb-8;
 }
 
 .btn {
@@ -41,28 +37,32 @@
 
 /* Heading Responsive Styles */
 
-.xlarge {
+.xxxlarge {
   @apply text-5xl md:text-6xl lg:text-7xl;
 }
 
-.large {
+.xxlarge {
   @apply text-4xl md:text-5xl lg:text-6xl;
 }
 
-.medium {
+.xlarge {
   @apply text-3xl md:text-4xl lg:text-5xl;
 }
 
-.small {
+.large {
   @apply text-2xl md:text-3xl lg:text-4xl;
 }
 
-.xsmall {
+.medium {
   @apply text-xl md:text-2xl lg:text-3xl;
 }
 
-.xxsmal {
+.normal {
   @apply text-lg md:text-xl lg:text-2xl;
+}
+
+.small {
+  @apply text-base md:text-lg lg:text-xl;
 }
 
 .icon-small {
