Refactor feature to SplitSide

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 
-.feature {
+.split-side {
   @apply flex flex-col-reverse lg:flex-row justify-center;
 }
 
