--- a/styles/global.css
+++ b/styles/global.css
@@ -49,7 +49,15 @@
 }
 
 .modal-content {
-  @apply w-full pt-10 px-6 pb-6 rounded-t-none rounded-b bg-white;
+  @apply w-full pt-10 px-6 pb-6 rounded-t-none rounded-b bg-white flex-col justify-center text-center;
+}
+
+.modal-content li {
+  @apply medium pb-4;
+}
+
+.modal-content li:hover {
+  @apply font-bold;
 }
 
 .text-button {
