--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,10 @@
   @apply block md:hidden;
 }
 
+.btn {
+  @apply flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium md:py-4 md:text-lg md:px-10;
+}
+
 .content {
   @apply w-full lg:w-1/2 py-5 px-4 sm:px-6 lg:px-8 flex flex-wrap content-center lg:justify-start justify-center;
 }
@@ -27,10 +31,6 @@
 
 .hero .cta {
   @apply flex justify-center mb-4 md:mb-8 mt-8 md:mt-5;
-}
-
-.btn {
-  @apply flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md  md:py-4 md:text-lg md:px-10;
 }
 
 .layout {
