--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@
 }
 
 .btn {
-  @apply flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium md:py-4 md:text-lg md:px-10;
+  @apply flex items-center justify-center px-8 py-2 border border-transparent text-base font-medium;
 }
 
 .content {
