Add css classes

--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,14 @@
   @apply p-2 rounded-lg relative top-5 left-5 shadow-sm;
 }
 
+.dashboard-nav-active {
+  @apply bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium;
+}
+
+.dashboard-nav {
+  @apply text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium;
+}
+
 .footer {
   @apply pt-4;
 }
