--- a/styles/global.css
+++ b/styles/global.css
@@ -44,8 +44,24 @@
   @apply mb-4 grid grid-cols-2 sm:items-center;
 }
 
+.form-label {
+  @apply block text-gray-800 text-sm font-bold mb-2;
+}
+
 .form-input {
   @apply inline px-3 py-2 text-gray-600;
+}
+
+.notification {
+  @apply text-sm font-normal italic ml-4;
+}
+
+.notification-red {
+  @apply notification text-red-500;
+}
+
+.notification-green {
+  @apply notification text-green-500;
 }
 
 .hero {
