--- a/styles/global.css
+++ b/styles/global.css
@@ -32,6 +32,14 @@
   @apply text-gray-900 hover:bg-gray-900 hover:text-white block px-3 py-2 rounded-md text-base font-medium;
 }
 
+.dashboard-panel {
+  @apply max-w-7xl mx-auto px-2 sm:px-6 lg:px-8
+}
+
+.dashboard-panel-main-section {
+  @apply border-b-2 flex items-baseline justify-between
+}
+
 .footer {
   @apply pt-4;
 }
