Add form section

--- a/styles/global.css
+++ b/styles/global.css
@@ -40,6 +40,10 @@
   @apply border-b-2 flex items-baseline justify-between;
 }
 
+.dashboard-panel-form-section {
+  @apply max-w-lg mt-8
+}
+
 .footer {
   @apply pt-4;
 }
